--- a/YCodeLab/ClientApp/public/index.html
+++ b/YCodeLab/ClientApp/public/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
@@ -20,8 +20,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Scripts -->
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <!---->
     <title>YCodeLab</title>
-  </head>
+</head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
