--- a/YCodeLab/ClientApp/public/index.html
+++ b/YCodeLab/ClientApp/public/index.html
@@ -10,7 +10,9 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" sizes="16x16">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-32.ico" sizes="32x32">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon-64.ico" sizes="64x64">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
