add open graph protocol into head tag

--- a/YCodeLab/ClientApp/public/index.html
+++ b/YCodeLab/ClientApp/public/index.html
@@ -26,6 +26,11 @@
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <!---->
     <title>YCodeLab</title>
+
+    <meta property="og:title" content="YCodeLab" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://y-code-lab.herokuapp.com/" />
+    <meta property="og:image" content="https://y-code-lab.herokuapp.com/favicon-64.png" />
 </head>
   <body>
     <noscript>
